Fix all varargs reflection methods to use varargs properly.